refactor: add utils for sending responses
Add README
Add ended_at field
Add .env.example
