# docs/swagger.json
@@ -8,6 +8,30 @@
     "basePath": "/",
     "paths": {
         "/api/sub": {
+            "post": {
+                "description": "Create a subscription",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "PostSub",
+                "parameters": [
+                    {
+                        "description": "Structure of new subscription",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/subs.subJSON"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/api/sub/{id}": {
             "get": {
                 "description": "Get a subscription by ID",
                 "produces": [
@@ -48,29 +72,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/subs.sub"
-                        }
-                    }
-                ],
-                "responses": {}
-            },
-            "post": {
-                "description": "Create a subscription",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "PostSub",
-                "parameters": [
-                    {
-                        "description": "Structure of new subscription",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/subs.sub"
+                            "$ref": "#/definitions/subs.subJSON"
                         }
                     }
                 ],
@@ -131,9 +133,15 @@
         }
     },
     "definitions": {
-        "subs.sub": {
+        "subs.subJSON": {
             "type": "object",
             "properties": {
+                "end_date": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
                 "price": {
                     "type": "integer"
                 },
@@ -141,17 +149,9 @@
                     "type": "string"
                 },
                 "start_date": {
-                    "$ref": "#/definitions/utils.JSONDate"
+                    "type": "string"
                 },
                 "user_id": {
-                    "type": "string"
-                }
-            }
-        },
-        "utils.JSONDate": {
-            "type": "object",
-            "properties": {
-                "time.Time": {
                     "type": "string"
                 }
             }
